style: 불필요한 빈줄 제거